--- a/.gitignore
+++ b/.gitignore
@@ -123,8 +123,13 @@ dist
 .vscode-test
 
 # yarn v2
+yarn.lock
 .yarn/cache
 .yarn/unplugged
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# npm lock
+package-lock.json
+test/
